# shard

./: .gitignore  CLAUDE.md  Cargo.toml
crates/shard-app/: Cargo.toml  tauri.conf.json
crates/shard-app/capabilities/: default.json
crates/shard-app/frontend/: index.html  package.json
crates/shard-app/frontend/src/: main.ts
crates/shard-app/frontend/src/components/: AddShardDialog.ts  AddWorkspaceDialog.ts  Sidebar.ts  TabBar.ts  TerminalPane.ts  TitleBar.ts
crates/shard-app/frontend/src/lib/: ContextMenu.ts  activityStore.ts  api.ts  statusIndicator.ts  terminal.ts  titleFormat.ts
crates/shard-app/frontend/src/styles/: app.css  context-menu.css  tokens.css
crates/shard-app/src/: daemon_ipc.rs  lib.rs  main.rs  state.rs
crates/shard-app/src/commands/: mod.rs  repo.rs  session.rs  workspace.rs
crates/shard-cli/: Cargo.toml
crates/shard-cli/src/: attach.rs  lib.rs  main.rs  opts.rs
crates/shard-cli/src/cmd/: daemon.rs  daemon_rpc.rs  lifecycle.rs  mod.rs  notify.rs  prune.rs  repo.rs  session.rs  workspace.rs  workspace_monitor.rs
crates/shard-cli/tests/: create_workspace.rs  daemon_smoke.rs  hooks_install.rs  remove_workspace.rs  repo_crud.rs  session_lifecycle.rs
crates/shard-cli/tests/common/: mod.rs
crates/shard-core/: Cargo.toml
crates/shard-core/src/: db.rs  error.rs  git.rs  harness.rs  hooks.rs  identifiers.rs  lib.rs  paths.rs  repos.rs  sessions.rs  shell.rs  state.rs  workspaces.rs
crates/shard-supervisor/: Cargo.toml
crates/shard-supervisor/src/: event_loop.rs  job_object.rs  lib.rs  process.rs  process_windows.rs  pty.rs
crates/shard-transport/: Cargo.toml
crates/shard-transport/src/: control_protocol.rs  daemon_client.rs  lib.rs  protocol.rs  transport.rs  transport_windows.rs
docs/: daemon-broker-migration.md  responsibility-map.md
docs/review/: ai-repo-review.md
tools/icon-gen/: .gitignore  README.md  apply-icon.ts  gen-icon.ts  gen-succulent.ts  iconify.ts  package.json
