[workspace]
resolver = "2"
members = [
    "crates/shard-core",
    "crates/shard-transport",
    "crates/shard-supervisor",
    "crates/shard-cli",
    "crates/shard-app",
]

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "io-std", "net", "sync", "process", "time"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2"
portable-pty = "0.9"
directories = "6"
uuid = { version = "1", features = ["v7"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossterm = "0.28"
async-trait = "0.1"
tempfile = "3"

[patch.crates-io]
portable-pty = { path = "deps/portable-pty" }
