[package]
name = "shard-app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
shard-core = { path = "../shard-core" }
shard-transport = { path = "../shard-transport" }
shard-supervisor = { path = "../shard-supervisor" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
