[package]
name = "shard-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shardctl"
path = "src/main.rs"

[dependencies]
shard-core = { path = "../shard-core" }
shard-transport = { path = "../shard-transport" }
shard-supervisor = { path = "../shard-supervisor" }
clap = { workspace = true }
tokio = { workspace = true }
crossterm = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[target.'cfg(windows)'.dependencies]
tray-icon = "0.19"
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }
windows-sys = { version = "0.52", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
] }
# Used by daemon.rs to decode the embedded tray-icon PNG. Already in the
# workspace dep tree as a transitive dep of tray-icon, so this surfaces it
# without adding new compile time.
png = "0.17"
