[package]
name = "shard-supervisor"
version = "0.1.0"
edition = "2021"

[dependencies]
shard-core = { path = "../shard-core" }
shard-transport = { path = "../shard-transport" }
portable-pty = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_Foundation",
    "Win32_Security",
] }
